--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "15.3.3",
     "genkit-cli": "^1.14.1",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
